# cbr-press-release-classifier

./: .env_elk_example  .env_example  .gitignore  EDA.md  README.md  baseline.md  check_style.sh  checkpoint.md  dataset.md  dl.md  docker-compose.deploy.yml  docker-compose.elk.yml  docker-compose.yml  report.md
cbr-api/: Dockerfile
cbr-ui/: Dockerfile
cbr_api/: .dockerignore  Dockerfile  main.py  requirements.txt
cbr_api/ml_models/: Model_KNN.pkl  Model_LR.pkl  Model_RandomForest.pkl  Model_SVC.pkl  models.json
cbr_api/models/: models.py
cbr_api/router/: router.py
cbr_api/tests/: test.py
cbr_api/tools/: settings.py  utils.py
cbr_ui/: Dockerfile  main.py  pyproject.toml  requirements.txt
cbr_ui/pages/: title.py
cbr_ui/pages/analytics/: pie.py  tsne.py  wordcloud.py
cbr_ui/pages/machine_learning/: fit.py
cbr_ui/tools/: api.py  utils.py
config/elasticsearch/: config.yml
config/filebeat/: config.yml
config/kibana/: config.yml
config/logstash/: pipelines.yml
config/logstash/pipelines/: cbr_logs.conf
docs/: 5-checkpoint-presentation.html  5-checkpoint-presentation.md  best_metrics.csv  deploy.md  metrics_dl.csv  metrics_linear.csv  metrics_non_linear.csv  plots.ipynb  preliminary.html  preliminary.md
eda/: cbr_press_releases.ipynb  pyproject.toml  requirements.txt  tsne_pca.ipynb  utils.py
fastapi/: extract-openapi.py  main.py  models.py  openapi.yaml  openapi.yml  readme.md  requirements.txt  router.py  settings.py  utils.py
fastapi/data/: data.csv  stopwords.txt
fastapi/models/: Model_01.pkl  Model_02.pkl  Model_LR.pkl  Model_SVC.pkl  models.json
fastapi/tests/: test.py
frontend/: Dockerfile  check_style.sh  config.py  data.py  main.py  plots.py  pyproject.toml  requirements.txt  utils.py
frontend/pages/: model.py  title.py
frontend/pages/analytics/: dinamic.py  length_text.py  pie.py  tsne.py  wordcloud.py
frontend/pages/machine_learning/: fit.py  metrics.py  predict.py
frontend/tools/: api.py  config.py  plots.py  utils.py
ml/: bag_of_words.ipynb  baseline.ipynb  baseline_bow_logreg_2.ipynb  baseline_dummy.ipynb  dummy.ipynb  experiments.ipynb  get_x_y.ipynb  glove.ipynb  glove_experiments.ipynb  metrics.csv  min_baseline.ipynb  n_grams_naive_bayes.ipynb  pipeline.ipynb  requirements.txt  stopwords.txt  tf_idf.ipynb  utils.py  word2vec.ipynb  word2vec_experiments.ipynb  word2vec_utils.py
ml/dl_models/: best_sentence_transformer_chunk_f.ipynb  cnn.ipynb  lstm.ipynb  metrics.csv  mlp.ipynb  mlp_aug.ipynb  sentence_transformer.ipynb  sentence_transformer_chunk.ipynb
ml/glove/: vectors.100d.txt  vectors.200d.txt  vectors.300d.txt  vectors.50d.txt
ml/linear_models/: TFidf_ensemble.ipynb  bag_of_words.ipynb  dummy.ipynb  glove.ipynb  metrics.csv  min_baseline.ipynb  n_grams_naive_bayes.ipynb  pipeline.ipynb  tf_idf.ipynb  word2vec.ipynb
ml/non_linear_models/: boostings.md  catboost.ipynb  ensemble.ipynb  k_neighbors.ipynb  lightgbm.ipynb  metrics.csv  random_forest.ipynb  timeseries_way.ipynb  xgboost.ipynb
scraping/: config.py  cur_usd.py  inflation.py  key_rate.py  logger.py  main.py  preprocessing.py  press_releases.py  pyproject.toml  requirements.txt  s3client.py
