[tool.poetry]
name = "eda"
version = "0.1.0"
description = "Исследование тектовых данных пресс-релизов ЦБ России."
authors = ["KuBaN658 <garkovski_dmitri@mail.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
gensim = "^4.3.3"
nltk = "^3.9.1"
pymystem3 = "^0.2.0"
wordcloud = "^1.9.3"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
