[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "frontend year project"
authors = ["KuBaN23_ <garkovski_dmitri@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
streamlit = "^1.41.1"
plotly = "^5.24.1"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
