[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "frontend year project"
authors = ["KuBaN23_ <garkovski_dmitri@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.9"
streamlit = "^1.41.1"
plotly = "^5.24.1"
nltk = "^3.9.1"
pymystem3 = "^0.2.0"
wordcloud = "^1.9.4"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
aiohttp = "^3.11.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
